--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://mattlogan.github.io" # the base hostname & protocol for your site
 twitter_username: _mattlogan
 github_username:  mattlogan
+permalink: none
 
 # Build settings
 markdown: kramdown
